--- a/inst_organizing.html
+++ b/inst_organizing.html
@@ -136,7 +136,7 @@
             font-size: 0.85rem;
         }
 
-        /* Institutional committee directory (no images, two-column) */
+        /* Internal committee directory (no images, two-column) */
         .committee-directory {
             border-radius: 14px;
             overflow: hidden;
@@ -153,7 +153,7 @@
             transform: translateY(-1px);
         }
 
-        /* Multi-column layout for institutional committee */
+        /* Multi-column layout for Internal committee */
         .committee-directory-list {
             column-count: 1;
             column-gap: 0;
@@ -269,7 +269,7 @@
                         <ul class="dropdown-menu" aria-labelledby="ichsmTeamDropdown">
                             <li><a class="dropdown-item" href="committee.html">Organizing Committee</a></li>
                             <li><a class="dropdown-item " href="advisory_committee.html">Advisory Committee</a></li>
-                            <li><a class="dropdown-item active" href="inst_organizing.html">Institutional Organizing Committee</a></li>
+                            <li><a class="dropdown-item active" href="inst_organizing.html">Internal Organizing Committee</a></li>
 
                         </ul>
                     </li>
@@ -287,7 +287,7 @@
     <!-- Main Content -->
     <section style="background: #e8f3fe; padding: 3rem 0;">
   <div class="container">
-    <h2 class="fw-bold text-center mb-4" style="color:#202861; font-size:2.1rem;">Institutional Organizing Committee</h2>
+    <h2 class="fw-bold text-center mb-4" style="color:#202861; font-size:2.1rem;">Internal Organizing Committee</h2>
     <div class="row justify-content-center">
       <div class="col-12 col-lg-10">
         <div class="card shadow-sm border-0" style="border-radius:16px;">
