--- a/speakers.html
+++ b/speakers.html
@@ -32,7 +32,7 @@
         .content-card { background: var(--white); border-radius: 15px; padding: 2rem; margin-bottom: 2rem; box-shadow: 0 5px 15px rgba(0,0,0,0.08); }
         .section-title { color: var(--primary); font-size: 2rem; font-weight: 700; margin-bottom: 1.5rem; text-align: center; }
         .chief-guest-section { 
-            margin: 3rem 0; 
+            margin: 1.25rem 0 0.75rem; 
         }
         .chief-guest-section .section-title {
             font-size: 1.3rem;
@@ -157,7 +157,7 @@
                         <ul class="dropdown-menu" aria-labelledby="ichsmTeamDropdown">
                             <li><a class="dropdown-item" href="committee.html">Organizing Committee</a></li>
                             <li><a class="dropdown-item" href="advisory_committee.html">Advisory Committee</a></li>
-                            <!-- <li><a class="dropdown-item" href="inst_advisory.html">Institutional Advisory Committee</a></li> -->
+                            <li><a class="dropdown-item" href="inst_organizing.html">Internal Organizing Committee</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="venue.html">Venue</a></li>
@@ -167,13 +167,13 @@
         </div>
     </nav>
     <!-- Main Content -->
-    <section style="background: #e8f3fe; padding: 3rem 0;">
+    <section style="background: #e8f3fe; padding: 1.75rem 0;">
         <div class="container">
             <h2 class="fw-bold text-center mb-4" style="color:#202861; font-size:2.1rem;">Speakers & Guests</h2>
             
             <!-- Chief Guest Section -->
             <div class="chief-guest-section" data-aos="fade-up">
-                <h2 class="fw-bold text-center mb-4" style="color:#202861; font-size:2.1rem;">Chief Guest</h2>
+                <h2 class="fw-bold text-center mb-3" style="color:#202861; font-size:2.1rem;">Chief Guest</h2>
                 <div class="row justify-content-center g-4">
                     <div class="col-12 col-md-4 d-flex justify-content-center">
                         <div class="card shadow-sm border-0" style="border-radius:16px; width:100%; max-width:320px;">
@@ -191,6 +191,378 @@
             </div>
         </div>
     </section>
+    <!-- Speakers Section -->
+    <section style="background:#e8f3fe; padding:0.75rem 0 3rem;">
+        <div class="container" data-aos="fade-up">
+
+            <h2 class="fw-bold text-center mb-3" style="color:#202861; font-size:2.1rem;">
+                Speakers
+            </h2>
+
+            <!-- 4 cards per row on large screens, 2 per row on small, 1 on extra-small -->
+            <div class="row justify-content-center g-4">
+
+                <!-- Speaker -->
+                <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                    <div class="card shadow-sm border-0"
+                         style="border-radius:16px; width:100%; max-width:320px;">
+                        <div class="card-body text-center">
+
+                            <img src="images/speakers/bindu_arora.png"
+                                 class="chief-guest-img"
+                                 alt="Prof. Bindu Arora">
+
+                            <div class="chief-guest-details">
+                                <h3>Prof. Bindu Arora</h3>
+                                <div class="chief-guest-designation">
+                                    Professor, Department of Management Studies,<br>
+                                    Gurukul Kangri (Deemed to be University), Haridwar
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Speaker -->
+                 <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                    <div class="card shadow-sm border-0"
+                         style="border-radius:16px; width:100%; max-width:320px;">
+                        <div class="card-body text-center">
+
+                            <img src="images/speakers/chen_jinying.png"
+                                 class="chief-guest-img"
+                                 alt="Prof. Chen Jinying">
+
+                            <div class="chief-guest-details">
+                                <h3>Prof. Chen Jinying</h3>
+                                <div class="chief-guest-designation">
+                                    Executive Director,<br>
+                                    Centre for Indian Studies,<br>
+                                    Shanghai International Studies University
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                    <div class="card shadow-sm border-0"
+                         style="border-radius:16px; width:100%; max-width:320px;">
+                        <div class="card-body text-center">
+
+                            <img src="images/speakers/chen_jinying.jpg"
+                                 class="chief-guest-img"
+                                 alt="Prof. Chen Jinying">
+
+                            <div class="chief-guest-details">
+                                <h3>Prof. Chen Jinying</h3>
+                                <div class="chief-guest-designation">
+                                    Executive Director,<br>
+                                    Centre for Indian Studies,<br>
+                                    Shanghai International Studies University
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div> -->
+
+                <!-- Speaker -->
+                <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                    <div class="card shadow-sm border-0"
+                         style="border-radius:16px; width:100%; max-width:320px;">
+                        <div class="card-body text-center">
+
+                            <img src="images/advisory3.png"
+                                 class="chief-guest-img"
+                                 alt="Prof. Chitrakalpa Sen">
+
+                            <div class="chief-guest-details">
+                                <h3>Prof. Chitrakalpa Sen</h3>
+                                <div class="chief-guest-designation">
+                                    Head of Economics,<br>
+                                    University of Southampton,<br>
+                                    Delhi Campus
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Speaker -->
+                <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                    <div class="card shadow-sm border-0"
+                         style="border-radius:16px; width:100%; max-width:320px;">
+                        <div class="card-body text-center">
+
+                            <img src="images/advisory133.png"
+                                 class="chief-guest-img"
+                                 alt="Prof. Janet Wilson">
+
+                            <div class="chief-guest-details">
+                                <h3>Prof. Janet Wilson</h3>
+                                <div class="chief-guest-designation">
+                                    Emeritus Professor,<br>
+                                    University of Northampton;Visiting Professor, Birmingham City University
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Speaker -->
+                <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                    <div class="card shadow-sm border-0"
+                         style="border-radius:16px; width:100%; max-width:320px;">
+                        <div class="card-body text-center">
+
+                            <img src="images/speakers/speaker5.png"
+                                 class="chief-guest-img"
+                                 alt="Prof. Lindsay G. Oades">
+
+                            <div class="chief-guest-details">
+                                <h3>Prof. Lindsay G. Oades</h3>
+                                <div class="chief-guest-designation">
+                                    Provost,<br>
+                                    University of York Mumbai Campus
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Speaker -->
+                <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                    <div class="card shadow-sm border-0"
+                         style="border-radius:16px; width:100%; max-width:320px;">
+                        <div class="card-body text-center">
+
+                            <img src="images/advisory4.png"
+                                 class="chief-guest-img"
+                                 alt="Prof. Nirmala Mani Adhikari">
+
+                            <div class="chief-guest-details">
+                                <h3>Prof. Nirmala Mani Adhikari</h3>
+                                <div class="chief-guest-designation">
+                                    HOD Dept. of Language and Mass Communication, Kathmandu University School of Arts
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Speaker -->
+                <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                    <div class="card shadow-sm border-0"
+                         style="border-radius:16px; width:100%; max-width:320px;">
+                        <div class="card-body text-center">
+
+                            <img src="images/speakers/speaker6.png"
+                                 class="chief-guest-img"
+                                 alt="Prof. Qu Yangyi">
+
+                            <div class="chief-guest-details">
+                                <h3>Prof. Qu Yangyi</h3>
+                                <div class="chief-guest-designation">
+                                    School of Marxism,<br>
+                                    Chongqing University, China
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Speaker -->
+                <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                    <div class="card shadow-sm border-0"
+                         style="border-radius:16px; width:100%; max-width:320px;">
+                        <div class="card-body text-center">
+
+                            <img src="images/speakers/speaker12.png"
+                                 class="chief-guest-img"
+                                 alt="Prof. Rachanee Dersingh">
+
+                            <div class="chief-guest-details">
+                                <h3>Prof. Rachanee Dersingh</h3>
+                                <div class="chief-guest-designation">
+                                    School of Liberal Arts,<br>
+                                    King Mongkut’s University of Technology, Thonburi,<br>
+                                    Bangkok, Thailand
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Speaker -->
+                <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                    <div class="card shadow-sm border-0"
+                         style="border-radius:16px; width:100%; max-width:320px;">
+                        <div class="card-body text-center">
+
+                            <img src="images/speakers/speaker7.png"
+                                 class="chief-guest-img"
+                                 alt="Prof. Rahul Singh">
+
+                            <div class="chief-guest-details">
+                                <h3>Prof. Rahul Singh</h3>
+                                <div class="chief-guest-designation">
+                                    Director-Research and International Office,<br>
+                                    IILM University, Gurugram
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Speaker -->
+                <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                    <div class="card shadow-sm border-0"
+                         style="border-radius:16px; width:100%; max-width:320px;">
+                        <div class="card-body text-center">
+
+                            <img src="images/speakers/speaker8.png"
+                                 class="chief-guest-img"
+                                 alt="Prof. Roy Postigo">
+
+                            <div class="chief-guest-details">
+                                <h3>Prof. Roy Postigo</h3>
+                                <div class="chief-guest-designation">
+                                    Trade Specialist,<br>
+                                    PromPeru, Embassy of Peru
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Speaker -->
+                <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                    <div class="card shadow-sm border-0"
+                         style="border-radius:16px; width:100%; max-width:320px;">
+                        <div class="card-body text-center">
+
+                            <img src="images/speakers/speaker9.png"
+                                 class="chief-guest-img"
+                                 alt="Prof. S. D. Roy">
+
+                            <div class="chief-guest-details">
+                                <h3>Prof. S. D. Roy</h3>
+                                <div class="chief-guest-designation">
+                                    Former Head,<br>
+                                    Department of English, Centre for Theatre & Films,<br>
+                                    University of Allahabad
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Speaker -->
+                <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                    <div class="card shadow-sm border-0"
+                         style="border-radius:16px; width:100%; max-width:320px;">
+                        <div class="card-body text-center">
+
+                            <img src="images/speakers/speaker10.jpg"
+                                 class="chief-guest-img"
+                                 alt="Prof. Shravan Kumar">
+
+                            <div class="chief-guest-details">
+                                <h3>Prof. Shravan Kumar</h3>
+                                <div class="chief-guest-designation">
+                                    Dean, School of Liberal Arts,<br>
+                                    K R Mangalam University, Sonipat, Haryana;<br>
+                                    Vice President, ELTAI
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Speaker -->
+                <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                    <div class="card shadow-sm border-0"
+                         style="border-radius:16px; width:100%; max-width:320px;">
+                        <div class="card-body text-center">
+
+                            <img src="images/speakers/speaker11.png"
+                                 class="chief-guest-img"
+                                 alt="Prof. Thanis Tangkitjaroenkun">
+
+                            <div class="chief-guest-details">
+                                <h3>Prof. Thanis Tangkitjaroenkun</h3>
+                                <div class="chief-guest-designation">
+                                    Editor-in-Chief,<br>
+                                    Reflections Journal (Scopus Q2)
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Speaker -->
+                <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                    <div class="card shadow-sm border-0"
+                         style="border-radius:16px; width:100%; max-width:320px;">
+                        <div class="card-body text-center">
+
+                            <img src="images/advisory7.png"
+                                 class="chief-guest-img"
+                                 alt="Prof. V. Ganesan">
+
+                            <div class="chief-guest-details">
+                                <h3>Prof. V. Ganesan</h3>
+                                <div class="chief-guest-designation">
+                                    Former Vice-Chancellor (VC),<br>
+                                    CIEFL (now EFLU), Hyderabad
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Speaker -->
+                <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                    <div class="card shadow-sm border-0"
+                         style="border-radius:16px; width:100%; max-width:320px;">
+                        <div class="card-body text-center">
+
+                            <img src="images/advisory1.png"
+                                 class="chief-guest-img"
+                                 alt="Prof. Vinay Kumar Nangia">
+
+                            <div class="chief-guest-details">
+                                <h3>Prof. Vinay Kumar Nangia</h3>
+                                <div class="chief-guest-designation">
+                                    Retd. Professor and Head, Dept. Of Management Studies, IIT Roorkee, Professor Emeritus NSUT, BML Munjal University and GNDU
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    
     <!-- Footer -->
     <footer style="background: #021828; color: #fff; padding: 1.5rem 0 1rem;">
         <div class="container">
