--- a/comm.html
+++ b/comm.html
@@ -100,7 +100,7 @@
                                 <br>
                             </p>
                             <p>
-                                <span style="font-weight: bold; color: black; font-size: 20px;">Institutional Advisory Committee</span><br>Prof. Hari Om Gupta
+                                <span style="font-weight: bold; color: black; font-size: 20px;">Internal Advisory Committee</span><br>Prof. Hari Om Gupta
                                 <br> Director
                                 <br>
                                 <br> Prof. Krishna Gopal
