--- a/contact.html
+++ b/contact.html
@@ -455,7 +455,7 @@
                             <ul class="dropdown-menu" aria-labelledby="ichsmTeamDropdown">
                                 <li><a class="dropdown-item" href="committee.html">Organizing Committee</a></li>
                                 <li><a class="dropdown-item" href="advisory_committee.html">Advisory Committee</a></li>
-                                <li><a class="dropdown-item" href="inst_organizing.html">Institutional Organizing Committee</a></li>
+                                <li><a class="dropdown-item" href="inst_organizing.html">Internal Organizing Committee</a></li>
                             </ul>
                         </li>
                     </li>
