--- a/insti.html
+++ b/insti.html
@@ -9,7 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="jiit.png" type="image/png">
-    <title>Institutional Committee - ICHSM 2026</title>
+    <title>Internal Committee - ICHSM 2026</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -52,7 +52,7 @@
                          <li><a href="#">Committee</a>
                             <ul>
                             <li><a href="ext.html">External Advisory Committee</a></li>
-                            <li><a href="insti.html">Institutional Advisory Committee</a></li>
+                            <li><a href="insti.html">Internal Advisory Committee</a></li>
                             <li><a href="int.html">Internal Organizing Committee</a></li>
                           </ul> 
                         </li>
@@ -89,7 +89,7 @@
                     <div class="9u skel-cell-important">
                         <section id="content">
                             <header>
-                                <h2>Institutional &nbsp;Advisory &nbsp;Committee</h2>
+                                <h2>Internal &nbsp;Advisory &nbsp;Committee</h2>
                             </header>
                             
                              <span style="font-weight: bold; font-size: 20px; color: #202020;">Prof. Hari Om Gupta</span>
