--- a/int.html
+++ b/int.html
@@ -52,7 +52,7 @@
                          <li><a href="#">Committee</a>
                             <ul>
                             <li><a href="ext.html">External Advisory Committee</a></li>
-                            <li><a href="insti.html">Institutional Advisory Committee</a></li>
+                            <li><a href="insti.html">Internal Advisory Committee</a></li>
                             <li><a href="int.html">Internal Organizing Committee</a></li>
                           </ul> 
                         </li>
