--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
         <!-- <span style="margin-right: 3rem; color:#1a237e; font-family:inherit;">Chief Guest- Prof. Santishree Dhulipudi Pandit, Vice Chancellor, JNU &nbsp;|</span> -->
         <a href="brochure.pdf" target="_blank" rel="noopener" style="color:#1976d2; text-decoration:underline; font-weight:700; font-family:inherit;">Brochure Released!</a>
         <span style="margin:0 1.5rem; color:#1976d2;">|</span>
-        <span style="margin-right: 3rem; color:#1a237e; font-family:inherit;">Abstract Submission is now open! &nbsp;|&nbsp; Submit your abstracts by November 30, 2025 &nbsp;|&nbsp; Conference Dates: Feb 26–28, 2026 &nbsp;|&nbsp; Venue: JIIT, Noida, India</span>
+        <span style="margin-right: 3rem; color:#1a237e; font-family:inherit;">Abstract Submission is now closed! &nbsp;|&nbsp; Conference Dates: Feb 26–28, 2026 &nbsp;|&nbsp; Venue: JIIT, Noida, India</span>
       </div>
     </div>
     <style>
