student org added

--- a/student_org.html
+++ b/student_org.html
@@ -269,8 +269,8 @@
                         <ul class="dropdown-menu" aria-labelledby="ichsmTeamDropdown">
                             <li><a class="dropdown-item" href="committee.html">Organizing Committee</a></li>
                             <li><a class="dropdown-item " href="advisory_committee.html">Advisory Committee</a></li>
-                            <li><a class="dropdown-item active" href="inst_organizing.html">Internal Organizing Committee</a></li>
-                            <li><a class="dropdown-item" href="student_org.html">Student’s Organizing Team</a></li>
+                            <li><a class="dropdown-item " href="inst_organizing.html">Internal Organizing Committee</a></li>
+                            <li><a class="dropdown-item active" href="student_org.html">Student’s Organizing Team</a></li>
 
                         </ul>
                     </li>
@@ -288,132 +288,37 @@
     <!-- Main Content -->
     <section style="background: #e8f3fe; padding: 3rem 0;">
   <div class="container">
-    <h2 class="fw-bold text-center mb-4" style="color:#202861; font-size:2.1rem;">Internal Organizing Committee</h2>
+    <h2 class="fw-bold text-center mb-4" style="color:#202861; font-size:2.1rem;">Student’s Organizing Team</h2>
     <div class="row justify-content-center">
       <div class="col-12 col-lg-10">
         <div class="card shadow-sm border-0" style="border-radius:16px;">
           <div class="card-body p-0 committee-directory">
             <div class="committee-directory-list">
               <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Prof. (Dr) Alka Sharma</div>
-                <span class="badge rounded-pill role-badge role-assistant">Professor</span>
+                <div style="font-weight:600; color:#233459;">Dhawal Shukla</div>
+                <span class="badge rounded-pill role-badge role-assistant">Btech III Year</span>
               </div>
               <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Alok Kumar Singh</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
+                <div style="font-weight:600; color:#233459;">Eshna Jain</div>
+                <span class="badge rounded-pill role-badge role-assistant">Btech III Year</span>
               </div>
               <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Amba Agarwal</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
+                <div style="font-weight:600; color:#233459;">Honey Verma</div>
+                <span class="badge rounded-pill role-badge role-assistant">Btech III Year</span>
               </div>
               <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Ankita Mishra</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
+                <div style="font-weight:600; color:#233459;">Prashant Kumar Garg</div>
+                <span class="badge rounded-pill role-badge role-assistant">Btech II Year</span>
               </div>
               <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Anshu Banwari</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
+                <div style="font-weight:600; color:#233459;">Shiv Vendra Singh</div>
+                <span class="badge rounded-pill role-badge role-assistant">Btech III Year</span>
               </div>
               <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Ashu Kumari</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
+                <div style="font-weight:600; color:#233459;">Tanish</div>
+                <span class="badge rounded-pill role-badge role-assistant">Btech III Year</span>
               </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Badri Bajaj</div>
-                <span class="badge rounded-pill role-badge role-assistant">Associate Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Chander Shekhar</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Deepak Verma</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Ekta Singh</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Ekta Srivastava</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Himanshi Lohmore</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Ila Joshi</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Kanu Priya</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Meenakshi Mishra</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Mohua Dutta</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Namreeta Kumari</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Neha Singh</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Nibha Sinha</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Nilu Choudhary</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Paridhi Chaudhary</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Praveen Sharma</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Priya</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Prof. Sanjay Kumar</div>
-                <span class="badge rounded-pill role-badge role-assistant">Professor of Practice</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Shikha Kumari</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Shweta Verma</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Suraj Das</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Ms. Vandana Chandel</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Vandana Sehgal</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
-              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div style="font-weight:600; color:#233459;">Dr. Yogita Naruka</div>
-                <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-              </div>
+              
             </div>
           </div>
         </div>
