--- a/committee.html
+++ b/committee.html
@@ -210,6 +210,7 @@
                             <li><a class="dropdown-item active" href="committee.html">Organizing Committee</a></li>
                             <li><a class="dropdown-item" href="advisory_committee.html">Advisory Committee</a></li>
                             <li><a class="dropdown-item" href="inst_organizing.html">Internal Organizing Committee</a></li>
+                            <li><a class="dropdown-item" href="student_org.html">Student’s Organizing Team</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
