--- a/index.html
+++ b/index.html
@@ -1413,7 +1413,7 @@
             <p class="lead">High-Impact Journals & Indexed Publications</p>
             <p>Selected papers will have the opportunity to be published in reputed international journals indexed in SCOPUS, ABDC, and WOS.</p>
             <ol style="padding-left: 20px;">
-              <li><strong>Reflections (Scopus Q2)</strong></li>
+              <li><strong>rEFLections (Scopus Q2)</strong></li>
               <li><strong>International Journal of Entrepreneurship and Small Business (Scopus Q3)</strong></li>
               <li><strong>International Journal of E-Entrepreneurship and Innovation (Scopus Q3)</strong></li>
               <li><strong>International Journal of Learning and Change (Scopus Q4)</strong></li>
