--- a/speakers.html
+++ b/speakers.html
@@ -532,7 +532,7 @@
                     </div>
                 </div>
 
-                <div class="hero-slide">
+                <!-- <div class="hero-slide">
                     <div class="hero-content">
                         <h2>Prof. S. D. Roy                        </h2>
                         <p>Former Head,Department of English, Centre for Theatre & Films,<br>University of Allahabad
@@ -541,7 +541,7 @@
                     <div class="hero-image">
                         <img src="images/speakers/speaker9.png">
                     </div>
-                </div>
+                </div> -->
 
                 <div class="hero-slide">
                     <div class="hero-content">
@@ -875,7 +875,7 @@
                 
 
                 <!-- Speaker -->
-                <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
+                <!-- <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
                     <div class="card speaker-card shadow-sm border-0"
                          style="border-radius:16px; width:100%; max-width:320px;">
                         <div class="card-body text-center">
@@ -895,7 +895,7 @@
 
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Speaker -->
                 <div class="col-12 col-sm-6 col-lg-3 d-flex justify-content-center">
