--- a/committee.html
+++ b/committee.html
@@ -347,7 +347,7 @@
                             <img src="images/coconvenor2.png" class="rounded-circle mx-auto mt-2" alt="Dr. Manas Ranjan Behera" style="width:90px; height:90px; object-fit:contain; background:#fff;">
                             <div class="card-body p-2">
                                 <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Manas Ranjan Behera</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Assistant Professor (Grade-II)                                </div>
+                                <div class="text-muted" style="font-size:0.9rem;">Assistant Professor                             </div>
                             </div>
                         </div>
                     </div>
@@ -360,7 +360,7 @@
                             <img src="images/secretary1.png" class="rounded-circle mx-auto mt-2" alt="Dr. Harleen Kaur" style="width:90px; height:90px; object-fit:contain; background:#fff;">
                             <div class="card-body p-2">
                                 <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Harleen Kaur</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Assistant Professor (Senior Grade)</div>
+                                <div class="text-muted" style="font-size:0.9rem;">Assistant Professor</div>
                             </div>
                         </div>
                     </div>
@@ -369,7 +369,7 @@
                             <img src="images/secretary2.png" class="rounded-circle mx-auto mt-2" alt="Dr. Amandeep Kaur" style="width:90px; height:90px; object-fit:contain; background:#fff;">
                             <div class="card-body p-2">
                                 <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Amandeep Kaur</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Assistant Professor (Grade-II)</div>
+                                <div class="text-muted" style="font-size:0.9rem;">Assistant Professor</div>
                             </div>
                         </div>
                     </div>
@@ -378,7 +378,7 @@
                             <img src="images/secretary3.png" class="rounded-circle mx-auto mt-2" alt="Dr. Purwa Srivastava" style="width:90px; height:90px; object-fit:contain; background:#fff;">
                             <div class="card-body p-2">
                                 <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Purwa Srivastava</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Assistant Professor (Grade-II)</div>
+                                <div class="text-muted" style="font-size:0.9rem;">Assistant Professor</div>
                             </div>
                         </div>
                     </div>
