--- a/index.html
+++ b/index.html
@@ -1423,6 +1423,10 @@
             </ol>
             
             <p><em>More journals from other domains will be added soon.<br>Publication charges are to be borne by the authors where applicable.</em></p>
+            <p style="font-weight: 700; margin-top: 12px; color: #0d47a1;">
+              Note: Selected papers will also be published in an Edited Book by Bloomsbury Publishing.
+            </p>
+            
           </div>
         </div>
       </section>
