--- a/student_org.html
+++ b/student_org.html
@@ -294,6 +294,12 @@
         <div class="card shadow-sm border-0" style="border-radius:16px;">
           <div class="card-body p-0 committee-directory">
             <div class="committee-directory-list">
+                <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
+                    <div style="font-weight:600; color:#233459;">Amitosh Kumar</div>
+                    <span class="badge rounded-pill role-badge role-assistant">Msc Economics</span>
+                  </div>
+        
+
               <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
                 <div style="font-weight:600; color:#233459;">Dhawal Shukla</div>
                 <span class="badge rounded-pill role-badge role-assistant">Btech III Year</span>
@@ -301,6 +307,10 @@
               <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
                 <div style="font-weight:600; color:#233459;">Eshna Jain</div>
                 <span class="badge rounded-pill role-badge role-assistant">Btech III Year</span>
+              </div>
+              <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
+                <div style="font-weight:600; color:#233459;">Gyanendra Prakash Pandey</div>
+                <span class="badge rounded-pill role-badge role-assistant">Msc Economics</span>
               </div>
               <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
                 <div style="font-weight:600; color:#233459;">Honey Verma</div>
