--- a/schedule.html
+++ b/schedule.html
@@ -87,8 +87,11 @@
     <section class="content-section">
         <div class="container">
             <h2 class="section-title" data-aos="fade-up">Schedule</h2>
-            <div class="content-card" data-aos="fade-up">
-                <div class="to-be-announced">To be announced</div>
+            <div class="content-card text-center" data-aos="fade-up">
+                <p class="mb-3">Please find the detailed conference schedule below:</p>
+                <a href="ichsm_2026_schedule.pdf" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer">
+                    View ICHSM 2026 Schedule (PDF)
+                </a>
             </div>
         </div>
     </section>
