--- a/schedule.html
+++ b/schedule.html
@@ -89,7 +89,7 @@
             <h2 class="section-title" data-aos="fade-up">Schedule</h2>
             <div class="content-card text-center" data-aos="fade-up">
                 <p class="mb-3">Please find the detailed conference schedule below:</p>
-                <a href="ichsm_2026_schedule.pdf" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer">
+                <a href="ichsm_schedule.pdf" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer">
                     View ICHSM 2026 Schedule (PDF)
                 </a>
             </div>
